fix(tabular-modifications): improve performance of copies
Signed-off-by: Joris Mancini <joris.mancini_externe@rte-france.com>